@@ -1,3 +1,13 @@
+2002-08-25  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* test-best.c: New test suite for the gmime-filter-best filter.
+
+	* gmime.h.in: Added gmime-filter-best.h
+
+	* gmime-filter-best.c (g_mime_filter_best_charset): Never return
+	NULL, instead return us-ascii.
+	(filter_filter): Fixed to not get into an infinite loop.
+
 2002-08-23  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* doc/*: Updated.
